src/main/java/com/example/JallowBooks/errors/ResourceNotFoundException.java
package com.example.JallowBooks.errors;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}